# docs/swagger.json
@@ -4,10 +4,13 @@
         "contact": {}
     },
     "paths": {
-        "/getall": {
+        "/guild/getall": {
             "get": {
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Guild"
                 ],
                 "summary": "Get all users",
                 "responses": {
@@ -23,31 +26,34 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.BadRequestError"
+                            "$ref": "#/definitions/custom.BadRequestError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/response.NotFoundError"
+                            "$ref": "#/definitions/custom.NotFoundError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.InternalServerError"
+                            "$ref": "#/definitions/custom.InternalServerError"
                         }
                     }
                 }
             }
         },
-        "/insert": {
+        "/guild/insert": {
             "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Guild"
                 ],
                 "summary": "Insert one user",
                 "parameters": [
@@ -57,7 +63,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/custom.ExampleBody"
                         }
                     }
                 ],
@@ -65,25 +71,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.Created"
+                            "$ref": "#/definitions/custom.Created"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.BadRequestError"
+                            "$ref": "#/definitions/custom.BadRequestError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/response.NotFoundError"
+                            "$ref": "#/definitions/custom.NotFoundError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.InternalServerError"
+                            "$ref": "#/definitions/custom.InternalServerError"
                         }
                     }
                 }
@@ -91,7 +97,61 @@
         }
     },
     "definitions": {
-        "models.Personaggio": {
+        "custom.BadRequestError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "custom.Created": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "code": {
+                    "type": "integer",
+                    "example": 201
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "custom.ExampleBody": {
+            "type": "object",
+            "required": [
+                "battle_tag",
+                "name",
+                "pg",
+                "surname",
+                "username"
+            ],
+            "properties": {
+                "battle_tag": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "pg": {
+                    "$ref": "#/definitions/custom.ExampleBodyPg"
+                },
+                "surname": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "custom.ExampleBodyPg": {
             "type": "object",
             "required": [
                 "class",
@@ -114,6 +174,60 @@
                 }
             }
         },
+        "custom.InternalServerError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 500
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "custom.NotFoundError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 404
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Personaggio": {
+            "type": "object",
+            "required": [
+                "class",
+                "name",
+                "rank",
+                "tier_set_pieces"
+            ],
+            "properties": {
+                "class": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rank": {
+                    "type": "string"
+                },
+                "tier_set_pieces": {
+                    "type": "integer",
+                    "maximum": 4
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "required": [
@@ -127,6 +241,9 @@
                 "battle_tag": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -137,57 +254,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.BadRequestError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.Created": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "code": {
-                    "type": "integer",
-                    "example": 201
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.InternalServerError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 500
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.NotFoundError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 404
-                },
-                "message": {
                     "type": "string"
                 }
             }
