# models/users.go
@@ -13,7 +13,7 @@ type Personaggio struct {
 	ID            int    `json:"id,omitempty" yaml:"id" mapstructure:"id"`
 	UserID        int    `json:"user_id,omitempty" yaml:"user_id" mapstructure:"user_id"`
 	Name          string `json:"name" yaml:"name" mapstructure:"name" validate:"required"`
-	Class         string `json:"class" yaml:"class" mapstructure:"class" validate:"required, class"`
-	TierSetPieces int    `json:"tier_set_pieces" yaml:"tier_set_pieces" mapstructure:"tier_set_pieces" validate:"required, lte=4"`
-	Rank          string `json:"rank" yaml:"rank" mapstructure:"rank" validate:"required, ranking"`
+	Class         string `json:"class" yaml:"class" mapstructure:"class" validate:"required,class"`
+	TierSetPieces int    `json:"tier_set_pieces" yaml:"tier_set_pieces" mapstructure:"tier_set_pieces" validate:"required,lte=4"`
+	Rank          string `json:"rank" yaml:"rank" mapstructure:"rank" validate:"required,ranking"`
 }
